--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,18 @@
 spring.application.name=ProyectoCoder
-## DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/ProyectoCoder
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa 
+# Base de datos H2 en memoria
+spring.datasource.url=jdbc:h2:mem:ProyectoCoder
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=
-
-## SQL
-spring.sql.init.mode=never
-
-
 ## JPA
 spring.jpa.properties.hibernate.current_session_context_class=thread
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
 ## H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
